# haskell-call-graph

./: .gitignore  LICENSE  Main.hs  README.md  haskell-call-graph.cabal
