Cabal-Version:      >= 1.2
Build-Type:         Simple
Name:               haskell-call-graph
Version:            0.1
Maintainer:         Max Bolingbroke <batterseapower@hotmail.com>
Homepage:           http://www.github.com/batterseapower/haskell-call-graph
License:            BSD3
License-File:       LICENSE
Author:             Max Bolingbroke
Synopsis:           Simple call graph tool for Haskell
Category:           Language

Executable haskell-call-graph
    Main-Is:        Main.hs
    Build-Depends:  base >= 4 && < 5,
                    process >= 1.0.1.2 && < 1.1,
                    filepath >= 1.1.0.3 && < 1.2,
                    haskell-src-exts >= 1.9 && < 1.10,
                    uniplate >= 1.5.1 && < 1.6,
                    language-dot >= 0.0.5 && < 0.13
    
    Ghc-Options:    -fwarn-unused-binds -fwarn-unused-imports -fwarn-unused-matches -fwarn-incomplete-patterns
